--- a/src/index.css
+++ b/src/index.css
@@ -25,11 +25,13 @@ body {
     min-height: 100vh;
     width: 100%;
     overflow-x: hidden;
-    background-color: #ffe5ec, 0.5;
-    background-image: url("./assets/bg3.png") ;
+    background-color: #e7ecef;
+    /* background-image: url("./assets/bg3.png") ; */
     background-size: 700px;
     background-repeat: repeat;
     animation: moveBackground 30s linear infinite;
+    color: #003566;
+    
 }
 
 @keyframes moveBackground {
